// https://plugins.gradle.org/
// import plugin by plugins DSL
plugins {
    id 'idea'
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.5'
    id("org.openrewrite.rewrite") version("latest.release")
}

rewrite {
    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
    setExportDatatables(true)
}

group = 'com.chuntung.explorer'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

[compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'

dependencies {
    // todo rewrite using webflux
    implementation('org.springframework.boot:spring-boot-starter-webmvc')
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // jsoup for handling html
    implementation "org.springframework.boot:spring-boot-starter-webmvc-test"

    // jsoup for handling html
    implementation 'org.jsoup:jsoup:1.22.1'

    // https://mvnrepository.com/artifact/org.brotli/dec
    implementation "org.springframework.boot:spring-boot-starter-restclient"
    implementation 'org.brotli:dec:0.1.2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    rewrite("org.openrewrite.recipe:rewrite-spring:6.23.0")
}

test {
    useJUnitPlatform()
}

graalvmNative {
    binaries {
        main {
            buildArgs.add('-H:+AddAllCharsets')
            buildArgs.add('-H:ExcludeResources=".*/application-local.yml$"')
        }
    }
}

tasks.named('bootBuildImage') {
    imageName = 'explorer'
    builder = 'paketobuildpacks/builder:tiny'
    pullPolicy = 'IF_NOT_PRESENT'
    environment = ['BP_NATIVE_IMAGE': 'true', 'BP_NATIVE_IMAGE_BUILD_ARGUMENTS': '-H:+AddAllCharsets -H:ExcludeResources=".*/application-local.yml$"']
}